# what_I_bought

./: .gitignore  Dockerfile  Sources  bot.py  db.py  docker compose.yaml  docker-compose.yaml  main.py  pyproject.toml
app/: bot.py  nalog.ru_service.py
app1/: ReadME  errors  sqdata.db
nginx/: fastapi.conf
