[tool.poetry]
name = "geldebot-qr"
version = "0.1.0"
description = ""
authors = ["sand-rey80 <sand-rey80@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.4"}
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
